[gd_scene load_steps=5 format=2]

[ext_resource path="res://autoloads/Pause.gd" type="Script" id=1]
[ext_resource path="res://scenes/menus/MenuButton.tscn" type="PackedScene" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.496124, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 10

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 205.0
margin_bottom = 255.0
text = "CONTINUE"
arrow_margin_from_center = 182

[node name="RestartButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 275.0
margin_bottom = 325.0
text = "RESTART LEVEL"
arrow_margin_from_center = 270

[node name="ExitButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 345.0
margin_bottom = 395.0
text = "BACK TO MAIN MENU"
arrow_margin_from_center = 352
[connection signal="pressed" from="VBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
